# fichas_gen

./: Cargo.toml  Ficha Médica(1-3).csv  README.md  shell.nix
src/: main.rs  model.rs  random_utils.rs
