[package]
name = "fichas_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
enum-iterator = "1.4.1"
lipsum = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
